src/scss/_global.scss
body {
  padding-top: $navbar-height;
  line-height: 1.3;
  height: 100vh;
  height: -webkit-calc(var(--vh, 1vh) * 100);
  height: expression(var(--vh, 1vh) * 100);
  height: -moz-calc(var(--vh, 1vh) * 100);
  height: -o-calc(var(--vh, 1vh) * 100);
  height: calc(var(--vh, 1vh) * 100);
  overflow: hidden;

  @include media-breakpoint-down(sm) {
    padding-top: 0;
  }
}

// helpers
.rounded-tl-tr-1rem {
  border-top-left-radius: 1rem;
  border-top-right-radius: 1rem;
}
.rounded-bl-br-1rem {
  border-bottom-left-radius: 1rem;
  border-bottom-right-radius: 1rem;
}
.leading-inherit {
  line-height: inherit !important;
}

// Typography
h1 {
  font-size: 4rem; // 64px
  line-height: 4.5rem; // 72px
}
h2 {
  font-size: 3rem; // 48px
  line-height: 3.5rem; // 56px
}
h3 {
  font-size: 2.5rem; // 40px
  line-height: 3rem; // 48px
}
h4 {
  font-size: 1.75rem; // 28px
  line-height: 2.25rem; // 36px
}
h5 {
  font-size: 1.5rem; // 24px
  line-height: 2rem; // 32px
}
h6 {
  font-size: 1.25rem; // 20px
  line-height: 1.625rem; // 26px
}
.text-sm {
  font-size: 0.875rem;
  line-height: 1.375rem;
}

// Font Family
.font-metropolis {
  font-family: $font-family-metropolis;
}
.font-inter {
  font-family: $font-family-inter;
}

// Font Weight
.font-weight-medium {
  font-weight: $font-weight-medium;
}
.font-weight-semibold {
  font-weight: $font-weight-semibold;
}

// Cards
.card {
  height: 100%;
  border: 0;
  border-radius: 1rem;
  overflow: hidden;
  transition: all ease 0.5s;
  transition-property: background-color, border-color;

  *:not(.collapsing) {
    transition: all ease 0.5s;
    transition-property: background-color, border-color;
  }
  .card-body {
    min-height: 0;
  }

  .footer-actions {
    display: flex;

    > a {
      flex: 1;
      display: flex;
      align-items: center;
      justify-content: center;
      padding: 1rem;
      font-weight: bold;
      font-family: $font-family-metropolis;
      color: inherit;
      border-right: 2px solid #fff;
      text-decoration: none;
      transition: inherit;

      &:last-child {
        border-right: 0;
      }
    }
    > a svg {
      margin-right: 0.5rem;

      * {
        color: inherit;
        fill: currentColor;
      }
    }
  }
}
.card-size-1 {
  width: 22.5rem;
  max-width: 100%;

  @include media-breakpoint-down(sm) {
    width: 100%;
  }
}

// Form Controls
.form-control:focus {
  box-shadow: none !important;
}
.text-box-variant-1 {
  background: $primary-050;
  border: 1px solid $primary-500;
  border-radius: 0.5rem;
  font-family: $font-family-inter;
  color: $primary-900; 
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 500;
  padding: 0.8125rem 1rem;
  height: auto;
  transition: all ease 0.3s;

  &::-webkit-input-placeholder {
    font-family: $font-family-metropolis;
    font-weight: bold;
    color: $primary-500;
  }
  &:-moz-placeholder { /* Firefox 18- */
    font-family: $font-family-metropolis;
    font-weight: bold;
    color: $primary-500;
  }
  &::-moz-placeholder {  /* Firefox 19+ */
    font-family: $font-family-metropolis;
    font-weight: bold;
    color: $primary-500;
  }
  &:-ms-input-placeholder {  
    font-family: $font-family-metropolis;
    font-weight: bold;
    color: $primary-500;
  }

  &:focus {
    background: $primary-100; 
    border-color: $primary-500;
    color: $primary-900;
    box-shadow: none;
  }
}


// Validation
.invalid-feedback {
  display: none;
  font-family: $font-family-inter;
  color: $danger-light;
  font-size: 0.875rem;
  line-height: 1rem;
}
.was-validated .form-control:invalid, .form-control.is-invalid {
  border-color: $danger-light;
  background-image: none;
  padding-right: 0.8125rem;

  &::-webkit-input-placeholder {
    color: $danger-light;
  }
  &:-moz-placeholder { /* Firefox 18- */
    color: $danger-light;
  }
  &::-moz-placeholder {  /* Firefox 19+ */
    color: $danger-light;
  }
  &:-ms-input-placeholder {  
    color: $danger-light;
  }
}

// Main Container
.main-container {
  height: inherit;
  display: flex;
  padding: 1rem;

  > .left-column {
    position: relative;
    z-index: 10;
    display: flex;
    justify-content: center;
    flex-direction: column;
    height: 100%;
    overflow: hidden;
    border-radius: 1rem;
    pointer-events: none;
  }
  .left-column > .block {
    flex-shrink: 1;
    pointer-events: auto;

    &.active {
      flex-grow: 1;
    }
    &.max-height-desktop {
      max-height: 560px;
    }
  }

  @include media-breakpoint-down(sm) {
    padding: 0.5rem;

    &.mobile-layout-1 {
      align-items: flex-end;

      > .left-column {
        max-height: 90%;
        justify-content: flex-end;
      }
    }
    &:not(.mobile-layout-1) {
      padding: 0.5rem 0 0;
      overflow: auto;

      &::-webkit-scrollbar {
        width: 0;
        background-color: transparent;
      }

      > .left-column {
        border-bottom-left-radius: 0;
        border-bottom-right-radius: 0;
        background: #fff;
        width: 100%;
        justify-content: flex-start;
        margin-top: 100%;
        padding: 0.5rem;
        pointer-events: auto;
        overflow: auto;

        &::-webkit-scrollbar {
          width: 0;
          background-color: transparent;
        }

        &:before {
          content: "";
          position: absolute;
          z-index: 1;
          width: 69px;
          height: 4px;
          left: 0;
          right: 0;
          top: 7px;
          margin: auto;
          background: #D0D5DB;
          border-radius: 5px;
        }
      }
    }
  }
}

// Icons
.icon-type-1 {
  display: flex;
  width: 32px;
  height: 32px;
  padding: 4px;
  border-radius: 4px;
}

// Accordion arrow change
[aria-expanded="false"] {

  .expanded {
    display: none;
  }
  .collapsed {
    display: block;
  }
}
[aria-expanded="true"] {

  .expanded {
    display: block;
  }
  .collapsed {
    display: none;
  }
}

// Scrollable
::-webkit-scrollbar
{
	width: 8px;
	background-color: transparent;
}
::-webkit-scrollbar-track
{
  border-radius: 12px;
  background-color: #eee;
}
::-webkit-scrollbar-thumb
{
  border-radius: 12px;
	background-color: #A4A5AF;
}

.scrollable-wrapper {
  position: relative;
  width: 100%;
  height: 0;
  transition: height ease 0.5s;

  > .scrollable {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    overflow: auto;
  }
}
.active .scrollable-wrapper {
  height: 100%;

  @include media-breakpoint-down(sm) {
    min-height: 250px;
  }
}

